# dtkwidget

./: .clog.toml  .gitignore  .gitlab-ci.yml  .packit.yaml  .project.json  .release.json  .syncexclude  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  conanfile.py  dtk.pro  dtkwidget.cmake  dtkwidget.pro  linglong.yaml
docs/: CMakeLists.txt  index.zh_CN.md
docs/doxygentheme/: doxygen-awesome-darkmode-toggle.js  header.html
docs/src/: dimageviewer.zh_CN.dox  dtkwidget-index.zh_CN.dox
docs/widgets/: daboutdialog.zh_CN.dox  daboutdialog.zh_CN.md  dabstractdialog.zh_CN.dox  dalertcontrol.zh_CN.dox  danchors.zh_CN.dox  dapplicationhelper.zh_CN.dox  darrowbutton.zh_CN.dox  darrowlinedrawer.zh_CN.dox  darrowlineexpand.zh_CN.dox  darrowrectangle.zh_CN.dox  dbackgroundgroup.zh_CN.dox  dbaseexpand.zh_CN.dox  dbaseline.zh_CN.dox  dboxwidget.zh_CN.dox  dbuttonbox.zh_CN.dox  dcircleprogress.zh_CN.dox  dcoloredprogressbar.zh_CN.dox  dcombobox.zh_CN.dox  dcommandlinkbutton.zh_CN.dox  dcrumbedit.zh_CN.dox  ddialog.zh_CN.dox  ddrawer.zh_CN.dox  denhancedwidget.zh_CN.dox  dfeaturedisplaydialog.zh_CN.dox  dfilechooseredit.zh_CN.dox  dfiledialog.zh_CN.dox  dfloatingbutton.zh_CN.dox  dfontcombobox.zh_CN.dox  dframe.zh_CN.dox  diconbutton.zh_CN.dox  dimageviewer.zh_CN.dox  dipv4lineedit.zh_CN.dox  dkeysequenceedit.zh_CN.dox  dlabel.zh_CN.dox  dlicensedialog.zh_CN.dox  dlineedit.zh_CN.dox  dlistview.zh_CN.dox  dmainwindow.zh_CN.dox  dmessagemanager.zh_CN.dox  dpasswordedit.zh_CN.dox  (+23 more)
examples/collections/: CMakeLists.txt  buttonexample.cpp  buttonexample.h  dialogexample.cpp  dialogexample.h  editexample.cpp  imageviewerexample.cpp  layoutexample.cpp  layoutexample.h  lcdnumberexample.cpp  lcdnumberexample.h  listviewexample.cpp  listviewexample.h  main.cpp  mainwindow.cpp  mainwindow.h  menuexample.cpp  pagewindowinterface.cpp  progressbarexample.cpp  progressbarexample.h  resources.qrc  rubberbandexample.cpp  scrollbarexample.cpp  sliderexample.cpp  spinnerexample.cpp  tooltipexample.cpp  tooltipexample.h  widgetexample.cpp  widgetexample.h  windowexample.cpp
examples/dwidget-examples/PrintPreviewSettingsPlugin/: CMakeLists.txt  PrintPreviewSettingsPlugin.pro  settingsplugin.cpp  settingsplugin.h
examples/dwidget-examples/collections/: CMakeLists.txt  bartab.cpp  bartab.h  buttonexample.cpp  buttonexample.h  buttongridtab.cpp  buttongridtab.h  buttonlisttab.cpp  buttonlisttab.h  buttontab.cpp  buttontab.h  cameraform.cpp  cameraform.h  collections.pro  comboboxtab.cpp  comboboxtab.h  dialogexample.cpp  dialogexample.h  editexample.cpp  editexample.h  examplewindowinterface.cpp  examplewindowinterface.h  graphicseffecttab.cpp  graphicseffecttab.h  imagebuttongridtab.cpp  imagebuttongridtab.h  images.qrc  imageviewerexample.cpp  imageviewerexample.h  indicatortab.cpp  indicatortab.h  inputtab.cpp  inputtab.h  layoutexample.cpp  layoutexample.h  lcdnumberexample.cpp  lcdnumberexample.h  linetab.cpp  linetab.h  listviewexample.cpp  (+42 more)
plugin/dtkuidemo/: CMakeLists.txt  dtkuidemo.pro  dtkuidemo.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
plugin/dtkuiplugin/: .qmake.conf  CMakeLists.txt  dcustomermacrowidget.h  dcustomerplugins.cpp  dcustomerplugins.h  dtkuiplugin.pro  dtkuiplugin.qrc
src/: .project.json  CMakeLists.txt  config.pri  d_version.pri  dtkwidget_global.h  dutility.h  lib.pri  org.deepin.dtkwidget.feature-display.json  org.deepin.dtkwidget.print-preview.json  src.pro
src/config.tests/libdframeworkdbus/: libdframeworkdbus.pro  main.cpp
src/translations/: dtkwidget.ts  dtkwidget_ady.ts  dtkwidget_af.ts  dtkwidget_am_ET.ts  dtkwidget_ar.ts  dtkwidget_ast.ts  dtkwidget_az.ts  dtkwidget_bg.ts  dtkwidget_bn.ts  dtkwidget_bo.ts  dtkwidget_bqi.ts  dtkwidget_br.ts  dtkwidget_ca.ts  dtkwidget_cs.ts  dtkwidget_da.ts  dtkwidget_de.ts  dtkwidget_el.ts  dtkwidget_en_AU.ts  dtkwidget_eo.ts  dtkwidget_es.ts  dtkwidget_es_419.ts  dtkwidget_eu.ts  dtkwidget_fa.ts  dtkwidget_fi.ts  dtkwidget_fil.ts  dtkwidget_fr.ts  dtkwidget_gl_ES.ts  dtkwidget_he.ts  dtkwidget_hi_IN.ts  dtkwidget_hr.ts  dtkwidget_hu.ts  dtkwidget_hy.ts  dtkwidget_id.ts  dtkwidget_it.ts  dtkwidget_ja.ts  dtkwidget_ka.ts  dtkwidget_km_KH.ts  dtkwidget_kn_IN.ts  dtkwidget_ko.ts  dtkwidget_ku.ts  (+36 more)
src/util/: DDesktopServices  DHiDPIHelper  DSvgRenderer  DTrashManager  DWidgetUtil  daccessibilitychecker.cpp  dapplicationsettings.cpp  dapplicationsettings.h  ddesktopservices.h  ddesktopservices_linux.cpp  ddesktopservices_win.cpp  desktop.pri  dfileiconprovider.cpp  dfileiconprovider.h  dhidpihelper.cpp  dhidpihelper.h  dprivateaccessor_p.h  dregionmonitor.cpp  dregionmonitor.h  dsvgrenderer.cpp  dsvgrenderer.h  dthumbnailprovider.cpp  dthumbnailprovider.h  dtrashmanager.h  dtrashmanager_linux.cpp  dtrashmanager_win.cpp  dwidgetutil.cpp  dwidgetutil.h  dwindowmanagerhelper.cpp  dwindowmanagerhelper.h  util.cmake  util.pri
src/util/private/: dregionmonitor_p.h
src/widgets/: DAccessibilityChecker  DAlertControl  DApplicationHelper  DApplicationSettings  DArrowButton  DArrowLineDrawer  DArrowLineExpand  DArrowRectangle  DBackgroundGroup  DBorderlessWindow  DCalendarWidget  DCheckButton  DColoredProgressBar  DColumnView  DComboBox  DCommandLinkButton  DDataWidgetMapper  DDateEdit  DDateTimeEdit  DDial  DDialogButtonBox  DDockWidget  DDoubleSpinBox  DDrawerGroup  DExpandGroup  DFileDialog  DFloatingWidget  DFocusFrame  DFontComboBox  DFontDialog  DFontSizeManager  DFrame  DGraphicsView  DHorizontalLine  DHorizontalScrollBar  DInputDialog  DKeySequenceEdit  DLCDNumber  DLabel  DListWidget  (+320 more)
src/widgets/assets/: dtk_img_resources.qrc
src/widgets/dbus/: com.iflytek.aiservice.asr.xml  com.iflytek.aiservice.iat.xml  com.iflytek.aiservice.ocr.xml  com.iflytek.aiservice.session.xml  (+2 more)
src/xfyun/: xfyun.pri
tests/: CMakeLists.txt  data.qrc  main.cpp  src.pri  test-recoverage.sh  tests.pro
tests/data/: titlebar-settings.json
tests/src/: src.pri
tests/testcases/: testcases.pri
tools/: CMakeLists.txt  tools.pro  translate_generation.py  translate_generation.sh
tools/svgc/: CMakeLists.txt  main.cpp  svgc.pro
(+996 files in other folders)
